--- a/cluster/apps/networking/nginx/ingress-nginx-helm-release.yaml
+++ b/cluster/apps/networking/nginx/ingress-nginx-helm-release.yaml
@@ -16,6 +16,13 @@ spec:
         name: ingress-nginx-charts
         namespace: flux-system
       interval: 5m
+  install:
+    remediation:
+      retries: 3
+  upgrade:
+    cleanupOnFail: true
+    remediation:
+      retries: 3
   values:
     controller:
       replicaCount: 1
@@ -108,7 +115,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: crowdsec-secrets
-                  key: CROWDSEC_API_KEY
+                  key: CROWDSEC_INGRESS_NGINX_BOUNCER_API_KEY
             - name: BOUNCER_CONFIG
               value: "/crowdsec/crowdsec-bouncer.conf"
             - name: MODE
@@ -119,10 +126,10 @@ spec:
               value: "/crowdsec/crowdsec-bouncer.conf"
             - name: CAPTCHA_PROVIDER
               value: "recaptcha" # valid providers are recaptcha, hcaptcha, turnstile
-#            - name: SECRET_KEY
-#              value: "<your-captcha-secret-key>" # If you want captcha support otherwise remove this ENV VAR
-#            - name: SITE_KEY
-#              value: "<your-captcha-site-key>" # If you want captcha support otherwise remove this ENV VAR
+            #            - name: SECRET_KEY
+            #              value: "<your-captcha-secret-key>" # If you want captcha support otherwise remove this ENV VAR
+            #            - name: SITE_KEY
+            #              value: "<your-captcha-site-key>" # If you want captcha support otherwise remove this ENV VAR
             - name: BAN_TEMPLATE_PATH
               value: /etc/nginx/lua/plugins/crowdsec/templates/ban.html
             - name: CAPTCHA_TEMPLATE_PATH
