--- a/cluster/apps/networking/metallb/metallb-helm-release.yaml
+++ b/cluster/apps/networking/metallb/metallb-helm-release.yaml
@@ -15,6 +15,13 @@ spec:
         name: bitnami-charts
         namespace: flux-system
       interval: 5m
+  install:
+    remediation:
+      retries: 3
+  upgrade:
+    cleanupOnFail: true
+    remediation:
+      retries: 3
   # https://github.com/bitnami/charts/blob/main/bitnami/metallb/values.yaml
   values:
     installCRDs: true
