--- a/cluster/apps/networking/crowdsec/crowdsec-helm-release.yaml
+++ b/cluster/apps/networking/crowdsec/crowdsec-helm-release.yaml
@@ -29,14 +29,15 @@ spec:
       tag: v1.5.2
     agent:
       acquisition:
+        # Grafana, k8s audit, radarr, sonarr, proxmox, wireguard
         - namespace: ingress-nginx
           podName: ingress-nginx-controller-*
           # as in crowdsec configuration, we need to specify the program name so the parser will match and parse logs
           program: nginx
       env:
         # As it's a test, we don't want to share signals with CrowdSec so disable the Online API.
-        - name: DISABLE_ONLINE_API
-          value: "true"
+        #        - name: DISABLE_ONLINE_API
+        #          value: "true"
         - name: DISABLE_LOCAL_API
           value: "true"
         - name: LOCAL_API_URL
@@ -47,3 +48,12 @@ spec:
         # As we are running Nginx, we want to install the Nginx collection
         - name: COLLECTIONS
           value: "crowdsecurity/nginx"
+    lapi:
+      env:
+        - name: DISABLE_LOCAL_API
+          value: "true"
+        - name: LOCAL_API_URL
+          valueFrom:
+            secretKeyRef:
+              name: crowdsec-secrets
+              key: CROWDSEC_API_URL
