chore(crowdsec): add crowdsec agent credentials

--- a/cluster/apps/networking/crowdsec/secrets.enc.yaml
+++ b/cluster/apps/networking/crowdsec/secrets.enc.yaml
@@ -5,33 +5,35 @@ metadata:
     name: crowdsec-secrets
     namespace: networking
 stringData:
-    CROWDSEC_API_URL: ENC[AES256_GCM,data:vOs9bB2qFZfuBttzQb6JAiwA6EJgWSI=,iv:gUr8RZt5ePtDK1boIElUdhDGj8LngIMIEw7BU7Jo2mY=,tag:pmg0MRWwZDQQXIjvQJAxqg==,type:str]
-    CROWDSEC_INGRESS_NGINX_BOUNCER_API_KEY: ENC[AES256_GCM,data:1gQQv/5wZv/xgoFyHnL5Qn1ngcWkNw==,iv:dkXMlaaNxBA3bDbsy7y+l2yxkIX6m5KjwZd/T5ToOxg=,tag:5rfi3b9+O21WfrmseQRprg==,type:str]
+    CROWDSEC_API_URL: ENC[AES256_GCM,data:8kHPoUChz2HNP7OEYgbwLrwMWTQclkw=,iv:nAFCEsJtY2tcxeO1Jx1/erS4w92iZyiYYK9Gw9eKl0w=,tag:GbvtzkyPsCtQccQXUGtAWQ==,type:str]
+    CROWDSEC_INGRESS_NGINX_BOUNCER_API_KEY: ENC[AES256_GCM,data:z1sXZ1kMBrIcJAealR/HeR//ipJYkw==,iv:FWvYMrfWd9k0lhyAS+YEESTNGYODhs0J/ofg7Bxr6pA=,tag:jSFevrGu7pfPl9mL0cAsTA==,type:str]
+    CROWDSEC_AGENT_USERNAME: ENC[AES256_GCM,data:RChv,iv:R2t0y9p2Uesw/oCSF0/SWsnKOOxjhsRAIz65jIXMTg8=,tag:SANLe5TpJ5R/ISBsi6qbKQ==,type:str]
+    CROWDSEC_AGENT_PASSWORD: ENC[AES256_GCM,data:5mffrBQgIcmhCnquEQv0prBrRr7PhqD710Nw2W/EMwdNG9MjWsuEczoYTAdjFsE3cIhyE504eueUzrJC93ppyA==,iv:ULzfJ4YcEE1sqiY1U8/EbjFEkvoKLOquEI1+I5zzfQU=,tag:0VReIvOFAxEYHeyzU1SjPw==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-10-06T11:56:29Z"
-    mac: ENC[AES256_GCM,data:wYoUcLC6SyBf5FXwTnAJCz362k8uj2HbfaE0ByITEfuXkX7QwAeP14U24algF3jXcg+q0dVP2xc05MDyRPvx0VjDfJq4Q5X1bunwcCofjxqQSIoa7lYIH7U/QbBRoCIiF12g3UklO6aEeFA5nvw4SN1jM5oh3qMgAwo2M417Io4=,iv:M1DNPGIvQUSzBpnwOkH7RsuY2p7uIhciPS03clJfU4k=,tag:eUNFjvJOYBVsYJQpFCpReA==,type:str]
+    lastmodified: "2023-10-06T12:53:48Z"
+    mac: ENC[AES256_GCM,data:ndXttDJDR6lti30jQhWk+Ema9gA77Bs8BQlPKQOMVNfSFiS4SKcNmV81LAmt/VNgdKy5PriKL5anim0dt6j/5uS2TwxVp35DSbnVf3OEeRXQXB+zbdsIF9/PKqS7E8WXnCSfiH8t1yaJUvMCGQgDkQTZgtjDTgyqAunzxInSbKI=,iv:FHgREAB4vCMmIx+M3NEI0ODrPsAj5Ircs9Qr+WjNsnw=,tag:u0huNn5D1o7b9r+jeV1Grg==,type:str]
     pgp:
-        - created_at: "2023-10-06T11:56:29Z"
+        - created_at: "2023-10-06T12:53:48Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQwAnDSgoeR1VIt9HXTDOOL0L418l9SglD+PquSU7GpbT7At
-            kNmolShbjFFRtMrcIbdBAf8XxL6VUv6BmHzmygTv5RlvWmYOR5euD+52FnFV8Qp0
-            gPtCNhDs6EgFSjrax1mNJPOVQnQyIOxKOce6mcSXvPcRftjAF3wnKdBXEy2Da8aE
-            OYShQfINhVgWmJLkIla3095rPoBmanXEyGbrb556YePRsykq4/9wLZ0diov6hETW
-            A4aCWMO2NP1RZ66dAK+RZOWRg1OYExsTO9hA5h3G5uK1OXFgx/Fi4coz8dlGglMJ
-            6GydTm6286DCN2zc5nV610QapdO1QbBCxaAYOKvaSsD56fLkv1kJLMe4D8Ptk2bN
-            5UNSLQNq7glYi6/rRLGtJOJtHVyBmK+Xe8ge1AFwHjgnI5KU1m1XDjE0OwvRTqGm
-            FVRwfw/N4l1UfJdlEwCIVSa0cRSX5mZec58TXaYI65fyTDjLx+L4C+Y6EB0XGHk2
-            R5G18Q2X1M2BnLtNTsdF0l4B9cv5CwCtQZ6w3t1SkA8zVrzGdtm0kHAiS/ftCn0i
-            0U/MBEg9LAO5SPlELgiAlVnpSrkXKzOAfUhFnHjjK7pj2ic+ve7vniVElxv0WMgi
-            M5oKCT1qWjmbRQ80pOJt
-            =ueI8
+            hQGMA71EESEn7N2iAQv+I2VyAQJlixlKkqD5AC1tPvpBh10Oz7UZ0CJiGEggkWSV
+            0SVlkPzIMU9wxaoT+ijwCWJToqZA2dfE54TsNIO+cGStz0XYh0dawO60Q/4WXr8h
+            lzkSVMt1dlgDGOFFkKOzd2OlD/b+E62o3/vCcqe8nxJhcz3CTpCcHFefbzqqB/kD
+            BUDR2x96hyNNWk2CSNItpsNl4ZucWwzFCeSaskr0OtW+ee0U27AM04689sKFjsp6
+            /Ymf7Siu0oR+LwWlqvZESH1Wt7dalKNhihjZFnBQ4XcY+UZvx7LPNTkGAcn+AiFN
+            fwc5O1ODk3c3oifRZkh/xdG+Bv+eGF2xAXPetgXhoyZxRWpy33SYfC37bVzNUTCc
+            kdE4GLsbtiE5ojJJBNaTn+yePn3yXwO6KeHHCLUDRCcpgq3QLvpFtKkdC5SxYw9m
+            /bNkx1SH+lz3WR7S32vNDstXFqTYb+fj4zosUg4lxuFwWJXxPFWajGjEa1fYKF4C
+            EJrQdl+So9WW5w37VdKy0l4BjEwQfjbh443wNXOugF6Ef+C8zLkrVWEdKoXmUz3q
+            KaqHwP1GdVwYBLgOCEK3uVQvFOj8G2+Q5Omv31qMVAKw0QHC5I8dOOx3cmxBRCaD
+            xrqazkqaTyPJsXmkRuLS
+            =QGw6
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
