--- a/cluster/apps/networking/crowdsec/crowdsec-helm-release.yaml
+++ b/cluster/apps/networking/crowdsec/crowdsec-helm-release.yaml
@@ -28,6 +28,8 @@ spec:
       pullPolicy: IfNotPresent
       tag: v1.5.2
     agent:
+      strategy:
+        type: Recreate
       acquisition:
         # Grafana, k8s audit, radarr, sonarr, proxmox, wireguard
         - namespace: ingress-nginx
@@ -40,6 +42,16 @@ spec:
         #          value: "true"
         - name: DISABLE_LOCAL_API
           value: "true"
+        - name: AGENT_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: crowdsec-secrets
+              key: CROWDSEC_AGENT_USERNAME
+        - name: AGENT_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: crowdsec-secrets
+              key: CROWDSEC_AGENT_PASSWORD
         - name: LOCAL_API_URL
           valueFrom:
             secretKeyRef:
@@ -49,6 +61,8 @@ spec:
         - name: COLLECTIONS
           value: "crowdsecurity/nginx"
     lapi:
+      strategy:
+        type: Recreate
       env:
         - name: DISABLE_LOCAL_API
           value: "true"
