chore(crowdsec): attempt at making crowdsec use correct agent credentials

--- a/cluster/apps/networking/crowdsec/secrets.enc.yaml
+++ b/cluster/apps/networking/crowdsec/secrets.enc.yaml
@@ -5,35 +5,33 @@ metadata:
     name: crowdsec-secrets
     namespace: networking
 stringData:
-    CROWDSEC_API_URL: ENC[AES256_GCM,data:8kHPoUChz2HNP7OEYgbwLrwMWTQclkw=,iv:nAFCEsJtY2tcxeO1Jx1/erS4w92iZyiYYK9Gw9eKl0w=,tag:GbvtzkyPsCtQccQXUGtAWQ==,type:str]
-    CROWDSEC_INGRESS_NGINX_BOUNCER_API_KEY: ENC[AES256_GCM,data:z1sXZ1kMBrIcJAealR/HeR//ipJYkw==,iv:FWvYMrfWd9k0lhyAS+YEESTNGYODhs0J/ofg7Bxr6pA=,tag:jSFevrGu7pfPl9mL0cAsTA==,type:str]
-    CROWDSEC_AGENT_USERNAME: ENC[AES256_GCM,data:RChv,iv:R2t0y9p2Uesw/oCSF0/SWsnKOOxjhsRAIz65jIXMTg8=,tag:SANLe5TpJ5R/ISBsi6qbKQ==,type:str]
-    CROWDSEC_AGENT_PASSWORD: ENC[AES256_GCM,data:5mffrBQgIcmhCnquEQv0prBrRr7PhqD710Nw2W/EMwdNG9MjWsuEczoYTAdjFsE3cIhyE504eueUzrJC93ppyA==,iv:ULzfJ4YcEE1sqiY1U8/EbjFEkvoKLOquEI1+I5zzfQU=,tag:0VReIvOFAxEYHeyzU1SjPw==,type:str]
+    CROWDSEC_API_URL: ENC[AES256_GCM,data:I+w8OPZ2dXmaysThhBDmt6yCLPgbp7Q=,iv:/ZQuVnisQ2eMzO030opBgJZBSJxFpc9fGpjpDw6y29A=,tag:wfF3jWpHsj7kOKBilrwNqg==,type:str]
+    CROWDSEC_INGRESS_NGINX_BOUNCER_API_KEY: ENC[AES256_GCM,data:xE80imLOOsRbx8H6zLh4j5iTUlJyZA==,iv:S1qH9D7BmvJp12qOAbygkP8DIaq1866fFKHP0prcGjY=,tag:QC2QBpcWd/ZkwqWH5v7ksA==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-10-06T12:53:48Z"
-    mac: ENC[AES256_GCM,data:ndXttDJDR6lti30jQhWk+Ema9gA77Bs8BQlPKQOMVNfSFiS4SKcNmV81LAmt/VNgdKy5PriKL5anim0dt6j/5uS2TwxVp35DSbnVf3OEeRXQXB+zbdsIF9/PKqS7E8WXnCSfiH8t1yaJUvMCGQgDkQTZgtjDTgyqAunzxInSbKI=,iv:FHgREAB4vCMmIx+M3NEI0ODrPsAj5Ircs9Qr+WjNsnw=,tag:u0huNn5D1o7b9r+jeV1Grg==,type:str]
+    lastmodified: "2023-10-06T13:05:47Z"
+    mac: ENC[AES256_GCM,data:tTzlszDsos22RMvWbXqzK7MQgTbZYadpjB9w/HXDAVk6v5x+k6h97Wn31Fn7cZUgDMVvLuVg+NOS5ZFri0FaUK2Fks6hR7TQUH9Mz1di/aFDcZ3j9m50T0qTb837+nhj0rzwEGTbBoSbd0aCLi7FstfJRuq6LHh5pVy2XvDpyEU=,iv:BCLC1sF8WispUOpjMCwXMbIhD3cIRqFkJuYDIf1h68w=,tag:9+wKyZFAKKBkZSa2aUnWPA==,type:str]
     pgp:
-        - created_at: "2023-10-06T12:53:48Z"
+        - created_at: "2023-10-06T13:05:47Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv+I2VyAQJlixlKkqD5AC1tPvpBh10Oz7UZ0CJiGEggkWSV
-            0SVlkPzIMU9wxaoT+ijwCWJToqZA2dfE54TsNIO+cGStz0XYh0dawO60Q/4WXr8h
-            lzkSVMt1dlgDGOFFkKOzd2OlD/b+E62o3/vCcqe8nxJhcz3CTpCcHFefbzqqB/kD
-            BUDR2x96hyNNWk2CSNItpsNl4ZucWwzFCeSaskr0OtW+ee0U27AM04689sKFjsp6
-            /Ymf7Siu0oR+LwWlqvZESH1Wt7dalKNhihjZFnBQ4XcY+UZvx7LPNTkGAcn+AiFN
-            fwc5O1ODk3c3oifRZkh/xdG+Bv+eGF2xAXPetgXhoyZxRWpy33SYfC37bVzNUTCc
-            kdE4GLsbtiE5ojJJBNaTn+yePn3yXwO6KeHHCLUDRCcpgq3QLvpFtKkdC5SxYw9m
-            /bNkx1SH+lz3WR7S32vNDstXFqTYb+fj4zosUg4lxuFwWJXxPFWajGjEa1fYKF4C
-            EJrQdl+So9WW5w37VdKy0l4BjEwQfjbh443wNXOugF6Ef+C8zLkrVWEdKoXmUz3q
-            KaqHwP1GdVwYBLgOCEK3uVQvFOj8G2+Q5Omv31qMVAKw0QHC5I8dOOx3cmxBRCaD
-            xrqazkqaTyPJsXmkRuLS
-            =QGw6
+            hQGMA71EESEn7N2iAQv9HcWA3g3kdfZ6Rn/Ei+3QIxF/XwBEDr6ogEuHnvh0hCwG
+            4hZ5QFFxlbMoI16vHfQKiqmTPKcvU+q3piVI+XYLfH6m9O/2Tsw9Hvivrc5Idxhp
+            9NCoQkCmzQhtXXnX8TyROSdYQc/cxkIeHaeoEam7OXHJHUiTpNbw8GVh0H4KqV/d
+            /Pf4g6+UD30y3orNqF9V2qLgpuJ8sJQmCBpfACLl8m0rakClUVwuqhKDFftZjthx
+            gzPoNrVaOR9ZAynJIVpJtrO+wYJL8HRUpViyBhifUj32rAi2NT7PvJpl2ZOjuIRC
+            H0u6w5T6XL44j+zF7acw8LTOu9TLoU2pWfaEfjP0XbiffhvIMMiWpl5w0fsLev3u
+            SOENt/iBduWssyigu+FVe8VjysziE52xocy+rv7KdIrRPDdu+bjtKIpQCTu7uiVy
+            JFYOtNAy+2CfyQbxeQugex0m+moGZQ/gnsOnqJlCCYzmqAuoopbBbZogFTLgECVb
+            h70PZXbIwGou/PZFRB9x0lwB8BEi67N+BevhRfZ2RQstOJICofChFxVPff6ivTBj
+            j71lrJF5Ky2V+lYjMHJZIniWSd4y02pR8zRgdgEE2VeqVex3QQ0Z4s56y4whfNpr
+            cMo1zHtPyeNLJUeOhA==
+            =iSX1
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
