--- a/cluster/apps/networking/crowdsec/secrets.enc.yaml
+++ b/cluster/apps/networking/crowdsec/secrets.enc.yaml
@@ -5,33 +5,35 @@ metadata:
     name: crowdsec-secrets
     namespace: networking
 stringData:
-    CROWDSEC_API_URL: ENC[AES256_GCM,data:I+w8OPZ2dXmaysThhBDmt6yCLPgbp7Q=,iv:/ZQuVnisQ2eMzO030opBgJZBSJxFpc9fGpjpDw6y29A=,tag:wfF3jWpHsj7kOKBilrwNqg==,type:str]
-    CROWDSEC_INGRESS_NGINX_BOUNCER_API_KEY: ENC[AES256_GCM,data:xE80imLOOsRbx8H6zLh4j5iTUlJyZA==,iv:S1qH9D7BmvJp12qOAbygkP8DIaq1866fFKHP0prcGjY=,tag:QC2QBpcWd/ZkwqWH5v7ksA==,type:str]
+    CROWDSEC_API_URL: ENC[AES256_GCM,data:Gm9HW17aAnstIXmrfdtG8zvAeBbZ6OY=,iv:SU7Sf7H/2lO0razvAyPKKOfNZ1K0wQLXAna/T3Cl2qM=,tag:j1hV9F+4jmljDeEWfjN5JQ==,type:str]
+    CROWDSEC_INGRESS_NGINX_BOUNCER_API_KEY: ENC[AES256_GCM,data:w762m8Ro75kf+MBePAdT8GlelMQDqg==,iv:FtMyOY10n2PbeTKC3c4cMhrjSW3kU2dL/7LnqAFcQr0=,tag:EYla0UmUirbqgA2JabMSmA==,type:str]
+    CROWDSEC_AGENT_USERNAME: ENC[AES256_GCM,data:ltzW,iv:kUiten9SfLibVxaBxnKMfR4ekthwvxGJkYtuqYa6lv4=,tag:3VJekZBPIPhQVZjoXl1Gmg==,type:str]
+    CROWDSEC_AGENT_PASSWORD: ENC[AES256_GCM,data:M4jWW549xivap8HoOFv2WZ9pRzaLedC0LinJHQbU3EVg5HXUORr4fOfXqDBcpSUTElwLBGRRENdfcKBvsEw54w==,iv:3PnY1FzE47q5/GsrHQvrMGQ49T+/3tUoiyFAmvO/Hyo=,tag:Y8VOPyY0nGNi/pCrDEhlqA==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-10-06T13:05:47Z"
-    mac: ENC[AES256_GCM,data:tTzlszDsos22RMvWbXqzK7MQgTbZYadpjB9w/HXDAVk6v5x+k6h97Wn31Fn7cZUgDMVvLuVg+NOS5ZFri0FaUK2Fks6hR7TQUH9Mz1di/aFDcZ3j9m50T0qTb837+nhj0rzwEGTbBoSbd0aCLi7FstfJRuq6LHh5pVy2XvDpyEU=,iv:BCLC1sF8WispUOpjMCwXMbIhD3cIRqFkJuYDIf1h68w=,tag:9+wKyZFAKKBkZSa2aUnWPA==,type:str]
+    lastmodified: "2023-10-06T13:30:44Z"
+    mac: ENC[AES256_GCM,data:fycnLM6PfTKru9pjuWFBrjwbAYalnFCP51yx79u7VQZy+UfcKUxHWjmuM+MA5GzX55sZn24/+0nj9rNQEj/hslbEiGE7/esxmzhrlTBFc3oR/1nfxdcCxksLDIA2ia/+n0jlUH/uaUW/fujFcl7RnwTXFoap+zlbqFNpAOdwv/k=,iv:+Z+qOZqc7XvMRc7wTpEAygo/ixUNrFLxFi/bELyW+I0=,tag:LCfl59T0Dec/tv6wbZQcZA==,type:str]
     pgp:
-        - created_at: "2023-10-06T13:05:47Z"
+        - created_at: "2023-10-06T13:30:44Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv9HcWA3g3kdfZ6Rn/Ei+3QIxF/XwBEDr6ogEuHnvh0hCwG
-            4hZ5QFFxlbMoI16vHfQKiqmTPKcvU+q3piVI+XYLfH6m9O/2Tsw9Hvivrc5Idxhp
-            9NCoQkCmzQhtXXnX8TyROSdYQc/cxkIeHaeoEam7OXHJHUiTpNbw8GVh0H4KqV/d
-            /Pf4g6+UD30y3orNqF9V2qLgpuJ8sJQmCBpfACLl8m0rakClUVwuqhKDFftZjthx
-            gzPoNrVaOR9ZAynJIVpJtrO+wYJL8HRUpViyBhifUj32rAi2NT7PvJpl2ZOjuIRC
-            H0u6w5T6XL44j+zF7acw8LTOu9TLoU2pWfaEfjP0XbiffhvIMMiWpl5w0fsLev3u
-            SOENt/iBduWssyigu+FVe8VjysziE52xocy+rv7KdIrRPDdu+bjtKIpQCTu7uiVy
-            JFYOtNAy+2CfyQbxeQugex0m+moGZQ/gnsOnqJlCCYzmqAuoopbBbZogFTLgECVb
-            h70PZXbIwGou/PZFRB9x0lwB8BEi67N+BevhRfZ2RQstOJICofChFxVPff6ivTBj
-            j71lrJF5Ky2V+lYjMHJZIniWSd4y02pR8zRgdgEE2VeqVex3QQ0Z4s56y4whfNpr
-            cMo1zHtPyeNLJUeOhA==
-            =iSX1
+            hQGMA71EESEn7N2iAQv9En61Y+VNbtuXu0bfLJbArRzNDY2Uv8CN754Pdav4+4pe
+            iK3wHjBqLi6a/DzuuWK7tw5Ax2eJt9JkakD6glV9EHSfZanteR5cBme0mphVA8Ls
+            cJYATEeCGekA69oMs9/igWhk5R61YAJzfxwARipPxzpiRjJh23YKvB3nuioYrTjC
+            FSzN9SiGQIzybEmJkeOzdItSZJL67zXsy2w+/44cPNSXs/iSwLqr77uV2qZtKxsh
+            9NGZnuHFFJSHvk/AgQZ+bfTWu/Mj8+aJOlppv8/1wJPRqpq1/NCwZPuU63aHg9T/
+            ar+VljlIvmPNtkmVav/D5KsqKpHBPrWPHGlYcVSrlfsDiym2mGNmbvObgOmtv7z+
+            MxZ2EFtnvI/762KINKcmiqmj/UjYHroFh8RlFkaK0ExYl5j7AGsj9aGr3XXnTj9A
+            +SmH50a/b6+6A++axLuIfQdBcrAlQOuay+jxUcpBr5zAYrlDys7V7YMeZbnVaOMl
+            PrTz7goZjdJ8KhsRGOeL0l4B92KpieEb5yZdl0PABuyB26S+q/cOuex8NAKwhMYC
+            N2NTFsyOrTMzzyJfI1TpOHt7glvdf7kD7Sf6NpP5zssN0QLbXkPzdRRJYFxnsVsI
+            StvCRs66xRRCIyJcY6gR
+            =XXnN
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
