chore(crowdsec): enable lapi

--- a/cluster/apps/networking/crowdsec/crowdsec-helm-release.yaml
+++ b/cluster/apps/networking/crowdsec/crowdsec-helm-release.yaml
@@ -59,8 +59,8 @@ spec:
       env:
         - name: DISABLE_ONLINE_API
           value: "true"
-        - name: DISABLE_LOCAL_API
-          value: "true"
+#        - name: DISABLE_LOCAL_API
+#          value: "true"
         - name: LOCAL_API_URL
           valueFrom:
             secretKeyRef:
