chore(crowdsec): remove crowdsec-secrets from kustomize substituteFrom

--- a/cluster/apps/networking/crowdsec/secrets.enc.yaml
+++ b/cluster/apps/networking/crowdsec/secrets.enc.yaml
@@ -5,35 +5,35 @@ metadata:
     name: crowdsec-secrets
     namespace: networking
 stringData:
-    CROWDSEC_API_URL: ENC[AES256_GCM,data:Gm9HW17aAnstIXmrfdtG8zvAeBbZ6OY=,iv:SU7Sf7H/2lO0razvAyPKKOfNZ1K0wQLXAna/T3Cl2qM=,tag:j1hV9F+4jmljDeEWfjN5JQ==,type:str]
-    CROWDSEC_INGRESS_NGINX_BOUNCER_API_KEY: ENC[AES256_GCM,data:w762m8Ro75kf+MBePAdT8GlelMQDqg==,iv:FtMyOY10n2PbeTKC3c4cMhrjSW3kU2dL/7LnqAFcQr0=,tag:EYla0UmUirbqgA2JabMSmA==,type:str]
-    CROWDSEC_AGENT_USERNAME: ENC[AES256_GCM,data:ltzW,iv:kUiten9SfLibVxaBxnKMfR4ekthwvxGJkYtuqYa6lv4=,tag:3VJekZBPIPhQVZjoXl1Gmg==,type:str]
-    CROWDSEC_AGENT_PASSWORD: ENC[AES256_GCM,data:M4jWW549xivap8HoOFv2WZ9pRzaLedC0LinJHQbU3EVg5HXUORr4fOfXqDBcpSUTElwLBGRRENdfcKBvsEw54w==,iv:3PnY1FzE47q5/GsrHQvrMGQ49T+/3tUoiyFAmvO/Hyo=,tag:Y8VOPyY0nGNi/pCrDEhlqA==,type:str]
+    CROWDSEC_API_URL: ENC[AES256_GCM,data:lMgLIVtG43aaBDop8chAbe/dY13bH00=,iv:QS/w7N5K6MTfNvNEYD3nv1L8zQjVy/ps/SZiOxJJOkY=,tag:exu80wKGIHARLQYbKkrHDA==,type:str]
+    CROWDSEC_INGRESS_NGINX_BOUNCER_API_KEY: ENC[AES256_GCM,data:cAkMIEQmn8diJygLEuwZ+Y26Y7zQNA==,iv:NzraO13SKwxB+0R7UwEMK/JlJYGY3sa2vL8pT8Gb4cQ=,tag:AhOLnu5Ng3KsWRj8Vyj3iQ==,type:str]
+    CROWDSEC_AGENT_USERNAME: ENC[AES256_GCM,data:m23C,iv:cdg16y6Ucn0jizFDoyrSfUcHFbhpic387CuUAvCP2OI=,tag:R0Xhme5c5hkYZo/ZQqlokg==,type:str]
+    CROWDSEC_AGENT_PASSWORD: ENC[AES256_GCM,data:nVun+mocA5DA4yshM5BYIk9g30BWhUE8+uDYr+zQRllRRF3s+IavaD7iK/GHDzhePdJ59Oarh9K4BOTtsIJnbw==,iv:LkgfwwPfxwOABCH0b9qvzmkSFyUSI3XLEXBCncBuc28=,tag:U7ba1C+CPYwsZvn2T1xEcw==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-10-06T13:30:44Z"
-    mac: ENC[AES256_GCM,data:fycnLM6PfTKru9pjuWFBrjwbAYalnFCP51yx79u7VQZy+UfcKUxHWjmuM+MA5GzX55sZn24/+0nj9rNQEj/hslbEiGE7/esxmzhrlTBFc3oR/1nfxdcCxksLDIA2ia/+n0jlUH/uaUW/fujFcl7RnwTXFoap+zlbqFNpAOdwv/k=,iv:+Z+qOZqc7XvMRc7wTpEAygo/ixUNrFLxFi/bELyW+I0=,tag:LCfl59T0Dec/tv6wbZQcZA==,type:str]
+    lastmodified: "2023-10-06T13:49:40Z"
+    mac: ENC[AES256_GCM,data:81N+JNK6Dmty65JU81fC/gLR6Kz6Nn0B9no3ZS8qHItjWdXZqbKgyoMYtTFxdcC1mXm3jaRkYSJ1Q15XnV4G5XSd17ZyceG2+X95rbO7lwu+AyiuBNZx78cpokVnfSMHVkjlFQQ4McIWgbxjgIUULLFGrKdDFSyrY0RSIQcrX/M=,iv:HbfUAku8ofEiW3dtCwCgQRMGQU+zoxlp0a4G5zGb6NY=,tag:uf2TOZ2RSFNYNXE+Ih9vBQ==,type:str]
     pgp:
-        - created_at: "2023-10-06T13:30:44Z"
+        - created_at: "2023-10-06T13:49:40Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv9En61Y+VNbtuXu0bfLJbArRzNDY2Uv8CN754Pdav4+4pe
-            iK3wHjBqLi6a/DzuuWK7tw5Ax2eJt9JkakD6glV9EHSfZanteR5cBme0mphVA8Ls
-            cJYATEeCGekA69oMs9/igWhk5R61YAJzfxwARipPxzpiRjJh23YKvB3nuioYrTjC
-            FSzN9SiGQIzybEmJkeOzdItSZJL67zXsy2w+/44cPNSXs/iSwLqr77uV2qZtKxsh
-            9NGZnuHFFJSHvk/AgQZ+bfTWu/Mj8+aJOlppv8/1wJPRqpq1/NCwZPuU63aHg9T/
-            ar+VljlIvmPNtkmVav/D5KsqKpHBPrWPHGlYcVSrlfsDiym2mGNmbvObgOmtv7z+
-            MxZ2EFtnvI/762KINKcmiqmj/UjYHroFh8RlFkaK0ExYl5j7AGsj9aGr3XXnTj9A
-            +SmH50a/b6+6A++axLuIfQdBcrAlQOuay+jxUcpBr5zAYrlDys7V7YMeZbnVaOMl
-            PrTz7goZjdJ8KhsRGOeL0l4B92KpieEb5yZdl0PABuyB26S+q/cOuex8NAKwhMYC
-            N2NTFsyOrTMzzyJfI1TpOHt7glvdf7kD7Sf6NpP5zssN0QLbXkPzdRRJYFxnsVsI
-            StvCRs66xRRCIyJcY6gR
-            =XXnN
+            hQGMA71EESEn7N2iAQwAhe5HDAB3bhJIV36BhpdhMSlpJAqlNJJLO+ti2B+VHC1y
+            X/pT4dfyh8aZr8Qs5VF/jcDAZqtGsQuAKhFK7CoF29PCZBMAbQKuP2y7FQcQp8r/
+            rCRMYCz5121dYpN3Wrx32iD1LU6hWJH5T4zyPoTbAi4iFMZ6u1G2q0BDqvIrX67A
+            uvAuFeSuiN0ogclOPZRDncSa4DhNKxzHcCPsgdNPBX29Y0GUH+dovgfYgW2+3exY
+            uJKD+iIwb0b/OPU8Qndr2zG4kKVyzqk3R8pYzdwmo6+xulRgdWiq3pap2gavMaHZ
+            c+lmf4MLswFV4ZY5L62kWJBQJ/L3tngh8uYcdu9BUGbDi6PqaBsTIGy1NYd2NKBq
+            CSr0N5v/OaHJ3tvWxyxF6k3pF53POUf6d9ofsXUqRKZOprcdrJ3yIHleVySpGDCF
+            W3iQ5EBwizPMA7rJzBDxxH/bYIVE0vb763FzKaNygdhucU7GtKZrgW9aZlKq9exV
+            5g92FwnwWn52W5ykkkU/0l4B7uobsYwhZ/jJAuDJccVFBr2OEl1cZt4uzKDujFgk
+            x7N21nzHL8N5dYHjppbC862iywifoLccCwd6SfYEnWJ0kuAUgNVq9gJzSEZI9hzy
+            kDS9o6k01B59IL9ukvre
+            =P8sk
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
