chore(crowdsec): yet another attempt at making this work

--- a/cluster/apps/networking/crowdsec/crowdsec-helm-release.yaml
+++ b/cluster/apps/networking/crowdsec/crowdsec-helm-release.yaml
@@ -45,6 +45,16 @@ spec:
         #          value: "true"
         - name: DISABLE_LOCAL_API
           value: "true"
+        - name: AGENT_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: crowdsec-secrets
+              key: CROWDSEC_AGENT_USERNAME
+        - name: AGENT_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: crowdsec-secrets
+              key: CROWDSEC_AGENT_PASSWORD
         - name: LOCAL_API_URL
           valueFrom:
             secretKeyRef:
