chore(crowdsec): fix ingress-nginx-bouncer not working

--- a/cluster/apps/networking/nginx/ingress-nginx-helm-release.yaml
+++ b/cluster/apps/networking/nginx/ingress-nginx-helm-release.yaml
@@ -134,12 +134,7 @@ spec:
               value: /etc/nginx/lua/plugins/crowdsec/templates/ban.html
             - name: CAPTCHA_TEMPLATE_PATH
               value: /etc/nginx/lua/plugins/crowdsec/templates/captcha.html
-          command:
-            [
-              "sh",
-              "-c",
-              "apk update; apk add bash; bash /docker_start.sh; mkdir -p /lua_plugins/crowdsec/; cp -R /crowdsec/* /lua_plugins/crowdsec/",
-            ]
+          command: [ 'sh', '-c', "sh /docker_start.sh; mkdir -p /lua_plugins/crowdsec/; cp -R /crowdsec/* /lua_plugins/crowdsec/" ]
           volumeMounts:
             - name: crowdsec-bouncer-plugin
               mountPath: /lua_plugins
