fix(crowdsec): fix malformatted secrets.enc.yaml

--- a/cluster/apps/networking/crowdsec/secrets.enc.yaml
+++ b/cluster/apps/networking/crowdsec/secrets.enc.yaml
@@ -5,37 +5,36 @@ metadata:
     name: crowdsec-secrets
     namespace: networking
 stringData:
-    CROWDSEC_API_URL: ENC[AES256_GCM,data:lMgLIVtG43aaBDop8chAbe/dY13bH00=,iv:QS/w7N5K6MTfNvNEYD3nv1L8zQjVy/ps/SZiOxJJOkY=,tag:exu80wKGIHARLQYbKkrHDA==,type:str]
-    CROWDSEC_INGRESS_NGINX_BOUNCER_API_KEY: ENC[AES256_GCM,data:cAkMIEQmn8diJygLEuwZ+Y26Y7zQNA==,iv:NzraO13SKwxB+0R7UwEMK/JlJYGY3sa2vL8pT8Gb4cQ=,tag:AhOLnu5Ng3KsWRj8Vyj3iQ==,type:str]
-    CROWDSEC_AGENT_USERNAME: ENC[AES256_GCM,data:m23C,iv:cdg16y6Ucn0jizFDoyrSfUcHFbhpic387CuUAvCP2OI=,tag:R0Xhme5c5hkYZo/ZQqlokg==,type:str]
-    CROWDSEC_AGENT_PASSWORD: ENC[AES256_GCM,data:nVun+mocA5DA4yshM5BYIk9g30BWhUE8+uDYr+zQRllRRF3s+IavaD7iK/GHDzhePdJ59Oarh9K4BOTtsIJnbw==,iv:LkgfwwPfxwOABCH0b9qvzmkSFyUSI3XLEXBCncBuc28=,tag:U7ba1C+CPYwsZvn2T1xEcw==,type:str]
+    CROWDSEC_API_URL: ENC[AES256_GCM,data:HmW5umQcCSuMx8FTOMDzNyeJpbUetUs=,iv:USnOufFTvfLfZdF1Bw/C+aOxp3gWJ2CtleIPz4s2Pk0=,tag:28jF+7e3UDTKB0tsMEBLaA==,type:str]
+    CROWDSEC_INGRESS_NGINX_BOUNCER_API_KEY: ENC[AES256_GCM,data:tXQ4N/PMogtICVAMZSp0XY+ns+2y/g==,iv:FpVxP2tRLcZmdVKVMmt8LBQ+Y4p/ohAXBFFZQ3mBKis=,tag:KwUgBfU8aGSiBa5NsZVhGg==,type:str]
+    CROWDSEC_AGENT_USERNAME: ENC[AES256_GCM,data:3ehL,iv:fE4bHS6+WYBjegfvK88tKXnt0hwDU57LMg1ddSnA46A=,tag:8dr10KzuNSugjgtYUp0edg==,type:str]
+    CROWDSEC_AGENT_PASSWORD: ENC[AES256_GCM,data:NwoqxpeucbUHvBoaf/8+M/77ZDTUlP1MF1IsSu/8n25Gr3NSVtYFh7RR7WF5BEpy4zPN571GQffYuDpjwu4WFA==,iv:0jwfT9cCYb+n+RqoJ+kW19kg7YGrQy6qIgvUl8vfTuQ=,tag:9Yptp1RxoZAY3DrVQQeahw==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-10-06T13:49:40Z"
-    mac: ENC[AES256_GCM,data:81N+JNK6Dmty65JU81fC/gLR6Kz6Nn0B9no3ZS8qHItjWdXZqbKgyoMYtTFxdcC1mXm3jaRkYSJ1Q15XnV4G5XSd17ZyceG2+X95rbO7lwu+AyiuBNZx78cpokVnfSMHVkjlFQQ4McIWgbxjgIUULLFGrKdDFSyrY0RSIQcrX/M=,iv:HbfUAku8ofEiW3dtCwCgQRMGQU+zoxlp0a4G5zGb6NY=,tag:uf2TOZ2RSFNYNXE+Ih9vBQ==,type:str]
+    lastmodified: "2023-10-06T17:55:23Z"
+    mac: ENC[AES256_GCM,data:pc1ZqJkaBTBEqq88uoyGiKFEn08RYsqZ4yn8zqoGW+laeHCqMtlqHOgr6gG9z9lXEacYCGPXq4EO8SS+7F9vMCE78RQCNXl9xblAqho2KZUHQNaclXVQVfWVD3O2lPDi6W2rWfDS9eSDf5kjbPJbFRKfqgjm3tg9yWiXt9l96G4=,iv:mU/lA/Yo0vgMlc8mhXajYnVjgPVPrLdkxL+8ggXevHo=,tag:jYPi5nSV62loHJsGVZK5Ag==,type:str]
     pgp:
-        - created_at: "2023-10-06T13:49:40Z"
+        - created_at: "2023-10-06T17:55:23Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQwAhe5HDAB3bhJIV36BhpdhMSlpJAqlNJJLO+ti2B+VHC1y
-            X/pT4dfyh8aZr8Qs5VF/jcDAZqtGsQuAKhFK7CoF29PCZBMAbQKuP2y7FQcQp8r/
-            rCRMYCz5121dYpN3Wrx32iD1LU6hWJH5T4zyPoTbAi4iFMZ6u1G2q0BDqvIrX67A
-            uvAuFeSuiN0ogclOPZRDncSa4DhNKxzHcCPsgdNPBX29Y0GUH+dovgfYgW2+3exY
-            uJKD+iIwb0b/OPU8Qndr2zG4kKVyzqk3R8pYzdwmo6+xulRgdWiq3pap2gavMaHZ
-            c+lmf4MLswFV4ZY5L62kWJBQJ/L3tngh8uYcdu9BUGbDi6PqaBsTIGy1NYd2NKBq
-            CSr0N5v/OaHJ3tvWxyxF6k3pF53POUf6d9ofsXUqRKZOprcdrJ3yIHleVySpGDCF
-            W3iQ5EBwizPMA7rJzBDxxH/bYIVE0vb763FzKaNygdhucU7GtKZrgW9aZlKq9exV
-            5g92FwnwWn52W5ykkkU/0l4B7uobsYwhZ/jJAuDJccVFBr2OEl1cZt4uzKDujFgk
-            x7N21nzHL8N5dYHjppbC862iywifoLccCwd6SfYEnWJ0kuAUgNVq9gJzSEZI9hzy
-            kDS9o6k01B59IL9ukvre
-            =P8sk
+            hQGMA71EESEn7N2iAQv/dF8dvSkQWDdlIi4vFyeynwWyGWEfx4Q2pZAdkPEPsrE3
+            6yZqnqVQTNZ3eucDKo2sry0LzGk9KwxkeL86SXJR4MHzJMp9jHR6WPPVZKZNUn1h
+            RF930CGRsWFehnSBDkw2wo9jz6e0QTVRa0p4gWUrjRj8Mjpvqwxbo/Wrg3bL+IJS
+            Q+RxqsbV2PGrIdgoFSYXJP3voMJgK7BYH+ENx++SJrJagxPKYElespvQQTR/xy9U
+            vhffP9Pd31D//lkYTJo9QqlnRBeRDTy7zBLtCmBtuAP3/O4NXVcLVLFY4T7rHr0/
+            iWgkGuLMKw5HUkDgxb5d581mCUiCqd4kJRL2ZffXMlHA0xkQcY93+ptrwEd0bgwu
+            uWdhacgJBNbHGBFc1tjv4kJBLGFJGky5uwgKd4SgwUnrItSTYYXasf3YJB7/KYWa
+            WWniR/h3sAonX1Ga/r0QwMvCoPNUbIQBalDdCYt+Ed4/Hq8p+NpyrxCHCnqYOHtd
+            0diolV+2b2XAOgHfB2js0lwBVgUfquZ/K9x+Xh0NAhAmBa6LKioSP/soeM0LA3Tx
+            2P9tJPU9dzpb+pOoYX2IK3UWogbXdQ+d9IPAQruBeOwKx9boqWsj53/qBbTdDfYc
+            NUJZEuqYJMwHsM/SvA==
+            =g+jp
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
-k
