fix(crowdsec): add missing namespace label

--- a/cluster/apps/networking/crowdsec/daemonset.yaml
+++ b/cluster/apps/networking/crowdsec/daemonset.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: crowdsec-agent
+  namespace: networking
   labels:
     k8s-app: crowdsec
     type: agent
