fix(crowdsec): add custom nginx json parser to crowdsec agent

--- a/cluster/apps/networking/crowdsec/acquis-configmap.yaml
+++ b/cluster/apps/networking/crowdsec/acquis-configmap.yaml
@@ -10,5 +10,4 @@ data:
     force_inotify: true
     poll_without_inotify: false
     labels:
-        type: docker
-        program: nginx
+      type: nginx-json
