--- a/cluster/apps/networking/crowdsec/parsers-configmap.yaml
+++ b/cluster/apps/networking/crowdsec/parsers-configmap.yaml
@@ -44,6 +44,8 @@ data:
         expression: JsonExtract(evt.Line.Raw, "server_protocol")
       - parsed: status
         expression: JsonExtract(evt.Line.Raw, "status")
+      - parsed: full_request
+        expression: JsonExtract(evt.Line.Raw, "request")
   nginx-json-logs.yaml: |
     filter: "evt.Meta.service == 'http' && evt.Meta.log_type in ['http_access-log', 'http_error-log']"
     onsuccess: next_stage
