chore(crowdsec): take into account containerd formatting of nginx logs

--- a/cluster/apps/networking/crowdsec/acquis-configmap.yaml
+++ b/cluster/apps/networking/crowdsec/acquis-configmap.yaml
@@ -10,4 +10,5 @@ data:
     force_inotify: true
     poll_without_inotify: false
     labels:
-      type: nginx-json
+      type: containerd
+      program: nginx
