chore(crowdsec): yet another attempt at making nginx logs work with crowdsec

--- a/cluster/apps/networking/crowdsec/parsers-configmap.yaml
+++ b/cluster/apps/networking/crowdsec/parsers-configmap.yaml
@@ -54,9 +54,8 @@ data:
 
   nginx-json-logs.yaml: |
     filter: "evt.Parsed.program == 'nginx'"
-    onsuccess: next_stage
     #debug: true
-    name: crowdsecurity/nginx-json-logs
+    name: crowdsecurity/nginx-logs
     description: "Parse nginx access and error logs"
     statics:
       - target: evt.StrTime
@@ -93,9 +92,11 @@ data:
         expression: JsonExtract(evt.Line.Raw, "status")
       - parsed: full_request
         expression: JsonExtract(evt.Line.Raw, "request")
+    --- 
+    filter: "evt.Meta.service == 'http' && evt.Meta.log_type in ['http_access-log', 'http_error-log']"
+    onsuccess: next_stage
+    name: local/nginx-json
     nodes:
-      - filter: "evt.Meta.service == 'http' && evt.Meta.log_type in ['http_access-log', 'http_error-log']"
-        grok:
+      - grok:
           pattern: '%{WORD:method} %{URIPATHPARAM:request} HTTP/%{NUMBER:http_version}'
           apply_on: full_request
-          
