--- a/cluster/apps/networking/crowdsec/parsers-configmap.yaml
+++ b/cluster/apps/networking/crowdsec/parsers-configmap.yaml
@@ -45,11 +45,11 @@ data:
         expression: JsonExtract(evt.Line.Raw, "status")
       - parsed: full_request
         expression: JsonExtract(evt.Line.Raw, "request")
-    --- 
+    ---
     filter: "evt.Meta.service == 'http' && evt.Meta.log_type in ['http_access-log', 'http_error-log']"
     onsuccess: next_stage
     name: local/nginx-json
-    nodes:
-      - grok:
-          pattern: '%{WORD:method} %{URIPATHPARAM:request} HTTP/%{NUMBER:http_version}'
-          apply_on: full_request
+    grok:
+      pattern: '%{WORD:method} %{URIPATHPARAM:request} HTTP/%{NUMBER:http_version}'
+      apply_on: full_request
+      
